# nuh-helper

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/workflows/: check.dependency-review.yml  check.pr-title.yml  check.quality.yml  check.test.yml  dependabot.yml  release.yml
nuh_helper/: __init__.py
nuh_helper/date_shift/: __init__.py  _excel.py  _parse.py  audit.py  mappings.py  validation.py
nuh_helper/profile/: __init__.py
tests/: conftest.py  test_audit_date_columns.py  test_date_shift.py  test_e2e_date_shift.py  test_inspect.py  test_profile.py
tests/data/: patients.xlsx  patients2.xlsx  patients2with-extra-data.xlsx
