[project]
name = "nuh-helper"
dynamic = ["version"]
description = "Helper functions for enabling studies"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pandas>=2.3.3",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nuh_helper"]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "pandas-stubs>=2.3.3.251201",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "types-openpyxl>=3.1.5.20250919",
]
