[project]
name = "nuh-helper"
dynamic = ["version"]
description = "Helper library for enabling studies"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pandas>=2.3.3",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nuh_helper"]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "coverage>=7.14.0",
    "pandas-stubs>=2.3.3.251201",
    "pre-commit>=4.6.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.13",
    "ty>=0.0.37",
    "types-openpyxl>=3.1.5.20260508",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["E", "F", "ANN", "B", "UP", "I", "SIM", "C4"]

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
