[project]
name = "nuh-helper"
dynamic = ["version"]
description = "Helper library for enabling studies"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pandas>=3.0.3",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nuh_helper"]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "coverage>=7.15.0",
    "pandas-stubs>=3.0.3.260530",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.20",
    "ty>=0.0.56",
    "types-openpyxl>=3.1.5.20260518",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["E", "F", "ANN", "B", "UP", "I", "SIM", "C4"]

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
